Fixed margin spacing for Contact section in about page

--- a/styles/index.less
+++ b/styles/index.less
@@ -3,8 +3,8 @@
 
 /* Global settings */
 * {
-  outline: 1px solid red;
-  outline-offset: -1px;
+  // outline: 1px solid red;
+  // outline-offset: -1px;
   color: @mainColor;
 }
 
@@ -195,7 +195,7 @@ header {
   }
 
   p {
-    margin: 0.3rem;
+    margin: 0.3rem 0;
   }
 }
 
